Update and rename 4.졸업선물(x).md to 4.졸업선물(o).md

--- a/section4/4.졸업선물(o).md
+++ b/section4/4.졸업선물(o).md
@@ -6,6 +6,46 @@
 - 배송비는 할인에 포함되지 않습니다.
 
 
+## 풀이
+```html
+       <script>
+            function solution(m, product){
+                let answer = 0;
+                const length = product.length;
+                product.sort((a,b) => (a[0]+a[1])-(b[0]+b[1]));
+                
+                for(let i=0; i<length; i++) {
+                    let temp = arr[i][0]/2;
+                    let cnt = 0;
+                    let sum = 0; 
+                    sum += temp;
+                    for(let j = 0; j<length; j++) {
+                        if( i === j) continue;
+                        sum += (arr[i][0]+arr[i][1]);
+                        cnt++;
+                        if(sum === m) break;
+                        if(sum > m) {
+                            cnt--;
+                            break;
+                        }
+                    }
+
+                    if(cnt >= answer) answer = cnt;
+                }
+
+                
+              
+
+                return answer;
+            } 
+
+            let arr=[[6, 6], [2, 2], [4, 3], [4, 5], [10, 3]];
+            console.log(solution(28, arr));
+        </script>
+```
+
+
+
 ## 해설 
 ```html
     <script>
