--- a/section4/4.졸업선물(o).md
+++ b/section4/4.졸업선물(o).md
@@ -15,13 +15,13 @@
                 product.sort((a,b) => (a[0]+a[1])-(b[0]+b[1]));
                 
                 for(let i=0; i<length; i++) {
-                    let temp = arr[i][0]/2;
+                    let temp = product[i][0]/2;
                     let cnt = 0;
                     let sum = 0; 
                     sum += temp;
                     for(let j = 0; j<length; j++) {
                         if( i === j) continue;
-                        sum += (arr[i][0]+arr[i][1]);
+                        sum += (product[i][0]+product[i][1]);
                         cnt++;
                         if(sum === m) break;
                         if(sum > m) {
