--- a/section5/8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우).md
+++ b/section5/8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우).md
@@ -51,3 +51,54 @@
             console.log(solution(a, b));
         </script>
 ```       
+
+
+## 해설
+```html
+     <script>
+
+            function compareMaps (map1,map2) {
+                if(map1.size !== map2.size) return false;
+                for(let [key,value] of map1) {
+                    if(!map2.has(key) || map2.get(key) !== value ) return false;   // 조건이 헷갈리다면 각각의경우를 if문으로 작성후 OR문으로 묶을것.
+                    
+                }
+                    return true;
+            }
+
+            function solution(s, t){
+                let answer = 0;
+                let tH = new Map();
+                let sH = new Map();
+                
+                let lt = 0;
+                for(x of t) {        
+                    if(tH.has(x)) tH.set(x,tH.get(x)+1);        
+                    else tH.set(x,1);
+                } 
+
+                let len = t.length-1;  // 비교후 빠질원소떄문
+                for(let i = 0; i<len; i++) {     //최초로 비교할 해쉬맵생성
+                    if(sH.has(s[i])) sH.set(s[i],sH.get(s[i]+1));
+                    else sH.set(s[i],1);
+                }
+                
+                for(let rt = len; rt<s.length; rt++) {
+                    if(sH.has(s[rt])) sH.set(s[rt],sH.get(s[rt])+1);        
+                    else sH.set(s[rt],1);
+
+                    if(compareMaps(sH,tH)) answer++;
+
+                    sH.set(s[lt],sH.get(s[lt])-1);      
+                    if(sH.get(s[lt]) === 0) sH.delete(s[lt]);   
+                    lt++;
+                }
+
+                return answer;
+            }
+            
+            let a="bacaAacba";
+            let b="abc";
+            console.log(solution(a, b));
+        </script>
+```
