--- a/section7/5. Least Recently(캐시문제).md
+++ b/section7/5. Least Recently(캐시문제).md
@@ -66,7 +66,7 @@
           answer[0] = x;
         });
 
-        return answer; // cache[0] = temp;
+        return answer; 
       }
 
       let arr = [1, 2, 3, 2, 6, 2, 3, 5, 7];
@@ -92,7 +92,7 @@
           }
         });
 
-        return answer; // cache[0] = temp;
+        return answer; 
       }
 
       let arr = [1, 2, 3, 2, 6, 2, 3, 5, 7];
