--- a/section2/6. 격자판 최대합(o).md
+++ b/section2/6. 격자판 최대합(o).md
@@ -1,7 +1,44 @@
 # N*N의 격자판이 주어지면 각 행의 합, 각 열의 합, 두 대각선의 합 중 가장 큰 합을 출력
 
 
-## 1.해설
+## 1.풀이
+```html
+  <script>
+      function solution(arr) {
+        let answer = 0;
+        let max = Number.MIN_SAFE_INTEGER;
+
+        let sum3 = 0;
+        let sum4 = 0;
+        for (let i = 0; i < arr.length; i++) {
+          let sum1 = 0;
+          let sum2 = 0;
+          for (let k = 0; k < arr.length; k++) {
+            sum1 += arr[i][k]; //가로
+            sum2 += arr[k][i]; //세로
+          }
+          sum3 += arr[i][i]; // 왼 -> 오 대각
+          sum4 += arr[i][arr.length - 1 - i]; // 오 -> 왼 대각
+          max = Math.max(sum1, sum2);
+        }
+
+        answer = Math.max(max, sum3, sum4);
+        return answer;
+      }
+
+      let arr = [
+        [10, 13, 10, 12, 15],
+        [12, 39, 30, 23, 11],
+        [11, 25, 50, 53, 15],
+        [19, 27, 29, 37, 27],
+        [19, 13, 30, 13, 19],
+      ];
+      console.log(solution(arr));
+    </script>
+```
+
+
+## 2.해설
 
 ```html
         <script>
