--- a/section3/5. 문자열 압축(x).md
+++ b/section3/5. 문자열 압축(x).md
@@ -3,7 +3,32 @@
 - 단 반복횟수가 1인 경우 생략합니다.
 
 
-# 풀이
+# 풀이 
+```html
+  <script>
+      function solution(s) {
+        let answer = '';
+        let cnt = 1;
+        for (let i = 0; i < s.length; i++) {
+          if (s[i] == s[i + 1]) cnt++;
+          else {
+            if (cnt > 1) {
+              answer += s[i];
+              answer += cnt;
+              cnt = 1;
+            } else answer += s[i];
+          }
+        }
+
+        return answer;
+      }
+      let str = 'KKHSSSSHHSSSE';
+      console.log(solution(str));
+    </script>
+ ```
+
+
+# 해설
 ```html
    <script>
             function solution(s){
