--- a/section8/1.재귀함수.md
+++ b/section8/1.재귀함수.md
@@ -5,6 +5,7 @@
 # 콜스택
 
  - 자바스크립트 엔진에 존재하는 콜스택에 우리가 작성한 코드를 자바스크립트 엔진이 해석하면서 함수들의 호출순서를 스택형식으로 저장한다.
+ - 스택에 쌓이는 함수의 스택 프레임에 들어있는 정보는 ( 매개변수, 지역변수, 복귀주소)가 들어간다.
  - 이 특성을 이용하여 1부터 N까지를 순서대로 출력할 수 있다.
 
 
