Update 2.재귀함수를 이용한 이진수 출력.md

--- a/section8/2.재귀함수를 이용한 이진수 출력.md
+++ b/section8/2.재귀함수를 이용한 이진수 출력.md
@@ -5,21 +5,24 @@
 ```html
     <script>
       function solution(n) {
-        let answer = '';
+        let answer = "";
         function DFS(L) {
-          let cnt = L % 2;
-          if (L === 1) {
-            answer += L;
-            return;
-          } else DFS(Math.floor(L / 2));
-          answer += cnt;
+          // 콜스택을그려가며 익힐것.
+          if (L === 0) return; //우선은 탈출할 시점을기준으로 if else문 활용할것.
+          else {
+            DFS(Math.floor(L / 2));
+            answer += L % 2;
+          }
         }
+
         DFS(n);
+
         return answer;
       }
-
       console.log(solution(11));
     </script>
+
+
 ```
 
 ## 해설
