Update 1.  선택정렬.md

--- a/algorithm/inflearn_algorithm_JS/section7/1.  선택정렬.md
+++ b/algorithm/inflearn_algorithm_JS/section7/1.  선택정렬.md
@@ -2,7 +2,7 @@
 - N개의 숫자가 입력되면 오름차순으로 정렬하여 출력하는 프로그램을 작성하시오( 각자연수는 정수형 범위 안에 있음)
 
 
-## 풀이
+## 풀이 1
 ```html
     <script>
       function solution(arr) {
@@ -16,6 +16,38 @@
       console.log(solution(arr));
     </script>
 ```
+
+## 풀이 2
+```html
+        <script>
+      function solution(arr) {
+        
+        
+
+        for(let i = 0; i<arr.length-1; i++) {
+          let idx = i;
+          let temp = 0;
+          for(let j = i+1; j<arr.length; j++) {
+            if(arr[j] < arr[idx]) idx = j;
+          }
+
+          if(i === idx) continue;
+
+          temp = arr[i];
+          arr[i] = arr[idx];
+          arr[idx] = temp;
+        }
+        
+        answer = arr;
+
+        return answer;
+      }
+
+      let arr = [13, 5, 11, 7, 23, 15];
+      console.log(solution(arr));
+    </script>
+```
+
 
 ## 해설 
 ```html
