--- a/algorithm/inflearn_algorithm_JS/section7/4. 삽입정렬(x).md
+++ b/algorithm/inflearn_algorithm_JS/section7/4. 삽입정렬(x).md
@@ -6,6 +6,7 @@
 ## 삽입정렬
 - 배열의 두번쨰값부터 시작하여 앞의 값들과 순차적으로 비교하여 정렬하는방식.
 - 이떄 앞의 값들과 비교를 시작하는 순서는 i-1에서 0번순서로 비교를 진행한다.(역순으로 비교진행)
+- 문제를 예로들면, 뽑아서 뒤로비교하는데 이떄 대상이 더 크다면 우측으로, 작다면 break로 탈출후 그 대상값 우측에 뽑은값을 넣어준다.
 
 
 
