Update 1.두 배열 합치기.md

--- a/algorithm/inflearn_algorithm_JS/section5/1.두 배열 합치기.md
+++ b/algorithm/inflearn_algorithm_JS/section5/1.두 배열 합치기.md
@@ -2,11 +2,12 @@
 - 오름차순으로 정렬이 된 두 배열이 주어지면 두 배열을 오름차순으로 합쳐 출력하는 프로그램을 작성해라.
 
 
-
-## 풀이
+- sort 시간복잡도 : nlogn
+- 투포인트 시간복잡도 : (N + M)
+## 풀이 1
 ```html
   <script>
-        function solution(arr1, arr2){
+          function solution(arr1, arr2){
             let answer=[];
             answer = arr1.concat(arr2);
             answer.sort((a,b) => a-b);
@@ -19,7 +20,27 @@
     </script>
 ```
 
+## 풀이 2
+``` html
+<script>
+function solution(arr1, arr2) {
+    let answer = [];
+    let j;
+    answer = arr1.concat(arr2);
+    //1 3 5 2 3 6 7 9
+    for (let i = 1; i < answer.length; i++) {
+      let temp = answer[i];
+      for (j = i - 1; j >= 0; j--) {
+        if (temp < answer[j]) answer[j + 1] = answer[j];
+        else break;
+      }
+      answer[j + 1] = temp;
+    }
 
+    return answer;
+  }
+</script>
+```
 
 
 
