--- a/algorithm/inflearn_algorithm_JS/section5/2.공통원소 구하기.md
+++ b/algorithm/inflearn_algorithm_JS/section5/2.공통원소 구하기.md
@@ -2,7 +2,7 @@
 - A, B 두 개의 집합이 주어지면 두 집합의 공통 원소를 추출하여 오름차순으로 출력하는 프로 그램을 작성하세요.
 
 
-## 풀이
+## 풀이1
 
 ```html
 <script>
@@ -15,6 +15,36 @@ for( let i = 0; i < n; i++) {
  }
 }
   </script>
+```
+
+## 풀이2
+
+```html
+  <script>
+      function solution(arr1, arr2) {
+        let answer = [];
+        arr1 = arr1.sort((a, b) => a - b);
+        arr2 = arr2.sort((a, b) => a - b);
+
+        let p1 = (p2 = 0);
+        let n = arr1.length;
+        let m = arr2.length;
+
+        while (n > p1 && m > p2) {
+          if (arr1[p1] > arr2[p2]) p2++;
+          else if (arr1[p1] === arr2[p2]) {
+            answer.push(arr1[p1]);
+            p1++;
+          } else p1++;
+        }
+
+        return answer;
+      }
+
+      let a = [1, 3, 9, 5, 2];
+      let b = [3, 2, 5, 7, 8];
+      console.log(solution(a, b));
+    </script>
 ```
 
 ## 해설
