--- a/algorithm/inflearn_algorithm_JS/section5/5. 쵀대 매출(sliding Window)(o).md
+++ b/algorithm/inflearn_algorithm_JS/section5/5. 쵀대 매출(sliding Window)(o).md
@@ -8,24 +8,24 @@
 
 ## 풀이
 ```html
-   <script>
-            function solution(k, arr){
-                let answer= 0;
-                let sum = 0;
-                
-                for( let i = 0; i<arr.length; i++) {
-                    if(i >= k) sum += (arr[i] - arr[i-k]);
-                    
-                    if(i < k) sum += arr[i];    
-                    
-                    if(answer < sum) answer = sum;
-                }
-                return answer;
-            }
-            
-            let a = [12, 15, 11, 20, 25, 10, 20, 19, 13, 15];
-            console.log(solution(3, a));
-        </script>
+    <script>
+      function solution(k, arr) {
+        let answer = 0;
+        let sum = 0;
+        let lt = 0;
+
+        for (let rt = 0; rt < arr.length; rt++) {
+          sum += arr[rt];
+          if (rt >= k) sum -= arr[lt++];
+          if (answer < sum) answer = sum;
+        }
+
+        return answer;
+      }
+
+      let a = [12, 15, 11, 20, 25, 10, 20, 19, 13, 15];
+      console.log(solution(3, a));
+    </script>
 ```
 
 
