--- a/algorithm/inflearn_algorithm_JS/section5/6. 학급회장(해쉬)(x).md
+++ b/algorithm/inflearn_algorithm_JS/section5/6. 학급회장(해쉬)(x).md
@@ -5,6 +5,77 @@
 - 가장많은 수를 받은 인원 회장.
 - 반드시 한명의 회장선출.
 
+## 풀이
+```html
+ <script>
+      function solution(s) {
+        let answer;
+
+        let sH = new Map();
+        sH.set(s[0], 0);
+        answer = s[0];
+        for (let x of s) {
+          if (sH.has(x)) sH.set(x, sH.get(x) + 1);
+          else sH.set(x, 1);
+
+          if (sH.get(answer) < sH.get(x)) answer = x;
+        }
+
+        return answer;
+        // // sh : key , value로 이루워짐.
+        // let sh = new Map();
+
+        // //key로 가능한 자료형 : number,string, function, object,NaN
+        // let number = 0;
+        // let str = "string";
+        // let obj = { a: 1 };
+        // let fnc = () => {
+        //   console.log("fnc");
+        // };
+
+        // // value 설정
+        // sh.set(number, 4); //key에 number 가능
+        // sh.set(str, 1); // key에 string 가능
+        // sh.set(obj, 2); //key에 object 가능
+        // sh.set(fnc, 3); // key에 함수 가능
+        // sh.set(number, 0); // 덮어쓰기 가능
+
+        // // value 얻기
+        // console.log(sh.get(number));
+
+        // //value 찾기
+        // console.log(sh.has(number));
+
+        // // value 삭제
+        // sh.delete(number);
+        // console.log(sh);
+
+        // //value 존재유무 : size
+        // console.log(sh.size);
+
+        // //hash 탐색 : for - of문
+
+        // // key,value쌍으로 출력
+        // for (let [key, value] of sh) {
+        //   console.log(key, value);
+        // }
+
+        // //key만 출력
+        // for (let key of sh.keys()) {
+        //   console.log(key);
+        // }
+
+        // //value만 출력
+        // for (let value of sh.values()) {
+        //   console.log(value);
+        // }
+      }
+
+      let str = "BACBACCACCBDEDE";
+      console.log(solution(str));
+    </script>
+```
+
 
 ## 해설
 
