--- a/algorithm/inflearn_algorithm_JS/section5/7. 아나그램(해쉬).md
+++ b/algorithm/inflearn_algorithm_JS/section5/7. 아나그램(해쉬).md
@@ -8,38 +8,37 @@
 
 ## 풀이
 ```html
-       <script>
-            function solution(str1, str2){
-                let answer="YES"; 
-                let sH1 = new Map();
-                let sH2 = new Map();
-                
-                for(let x of str1) {
-                    if(sH1.has(x)) sH1.set(x,sH1.get(x)+1);
-                    else sH1.set(x,1);
-                }
-                
-                for(let x of str2) {
-                    if(sH2.has(x)) sH2.set(x,sH2.get(x)+1);
-                    else sH2.set(x,1);
-                }
+      <script>
+      function solution(str1, str2) {
+        let answer = "YES";
 
-                for(x of str1) {
-                    if(sH1.has(x) !== sH2.has(x)) {
-                        answer = "No"; 
-                        break;
-                    }
-                }
-                
-                console.log(sH1);
-                console.log(sH2);
-                return answer;
-            }
-         
-            let a="AbaAeCe";
-            let b="baeeACA";
-            console.log(solution(a, b));
-        </script>
+        let sH1 = new Map();
+        let sH2 = new Map();
+
+        for (let x of str1) {
+          if (sH1.has(x)) sH1.set(x, sH1.get(x) + 1);
+          else sH1.set(x, 1);
+        }
+
+        for (let x of str2) {
+          if (sH2.has(x)) sH2.set(x, sH2.get(x) + 1);
+          else sH2.set(x, 1);
+        }
+
+        for (let [key, val] of sH1) {
+          if (!sH2.has(key) || !(sH2.get(key) === val)) {
+            answer = "NO";
+            break;
+          }
+        }
+
+        return answer;
+      }
+
+      let a = "AbaAeCe";
+      let b = "baeeACA";
+      console.log(solution(a, b));
+    </script>
 ```
 
 
