Update and rename 8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우).md to 8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우)(o).md

--- a/algorithm/inflearn_algorithm_JS/section5/8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우)(o).md
+++ b/algorithm/inflearn_algorithm_JS/section5/8. 모든 아나그램 찾기(해쉬, 투포인터, 슬라이딩 윈도우)(o).md
@@ -8,48 +8,49 @@
 
 ## 풀이
 ```html
-     <script>
-            function solution(s, t){
-                let answer=0;
-                
-                let arrayS =  s.split('');
-                let arrayT = t.split('');
-                console.log(arrayS);
-                console.log(arrayT);
+      <script>
+      function compareMap(sh1, sh2) {
+        for (let [key, val] of sh1) {
+          if (!sh2.has(key) || sh2.get(key) !== val) return false;
+        }
+        return true;
+      }
 
-                while(arrayS.length >= 3){
-                    let cnt = 0;
-                    let sH = new Map();
-                    for(let x of arrayT) {
-                       
-                        if(sH.has(x)) sH.set(x,sH.get(x)+1);
-                        else sH.set(x,1);
-                    }
+      function solution(s, t) {
+        let answer = 0;
+        let m = s.length;
+        let n = t.length;
 
-                    for(let i = 0; i<arrayT.length; i++) {
-                        if(!sH.has(arrayS[i]) || sH.get(arrayS[i]) === 0) break;
-                        else sH.set(arrayS[i],sH.get(arrayS[i])-1);
-                    }
+        let tsH = new Map();
+        let ssH = new Map();
 
-                    for(let [key,value] of sH) {
-                        if(value !== 0) break;
-                        cnt++;
-                    }
+        for (let x of t) {
+          if (tsH.has(x)) tsH.set(x, tsH.get(x) + 1);
+          else tsH.set(x, 1);
+        }
 
-                    if(cnt ===  sH.size) answer++;
+        for (let i = 0; i < n - 1; i++) {
+          if (ssH.has(s[i])) ssH.set(s[i], ssH.get(s[i]) + 1);
+          else ssH.set(s[i], 1);
+        }
 
+        for (let i = n - 1; i < m; i++) {
+          if (ssH.has(s[i])) ssH.set(s[i], ssH.get(s[i]) + 1);
+          else ssH.set(s[i], 1);
 
-                    arrayS.shift();
-                    console.log(arrayS);
-                }
+          if (ssH.size === tsH.size && compareMap(ssH, tsH)) answer++;
 
-                return answer;
-            }
-            
-            let a="bacaAacba";
-            let b="abc";
-            console.log(solution(a, b));
-        </script>
+          ssH.set(s[i - (n - 1)], ssH.get(s[i - (n - 1)]) - 1);
+          if (ssH.get(s[i - (n - 1)]) === 0) ssH.delete(s[i - (n - 1)]);
+        }
+
+        return answer;
+      }
+
+      let a = "bacaAacba";
+      let b = "abc";
+      console.log(solution(a, b));
+    </script>
 ```       
 
 
