Update 1. 자리수의 합.md

--- a/algorithm/inflearn_algorithm_JS/section4/1. 자리수의 합.md
+++ b/algorithm/inflearn_algorithm_JS/section4/1. 자리수의 합.md
@@ -33,6 +33,35 @@
         </script>
 ```
 
+## 풀이(2)
+```html
+    <script>
+      function solution(n, arr) {
+        let answer = 0;
+        let max = 0;
+        for (let x of arr) {
+          let sum = 0;
+          let temp = x;
+
+          while (temp) {
+            sum += temp % 10;
+            temp = Math.floor(temp / 10);
+          }
+
+          if (max === sum) answer = Math.max(answer, x);
+
+          if (max < sum) {
+            answer = x;
+            max = sum;
+          }
+        }
+        return answer;
+      }
+      let arr = [128, 460, 603, 40, 521, 137, 123];
+      console.log(solution(7, arr));
+    </script>
+```
+
 ## 해설(1)
 ```html
  <script>
