Update and rename 5.k번쨰 큰수.md to 5.k번쨰 큰수(o).md

--- a/algorithm/inflearn_algorithm_JS/section4/5.k번쨰 큰수(o).md
+++ b/algorithm/inflearn_algorithm_JS/section4/5.k번쨰 큰수(o).md
@@ -7,30 +7,35 @@
 
 ## 풀이
 ```html 
- <script>
-            function solution(n, k, card){
-                let temp = [];
-                card.sort();            
-                for(let i = 0; i<n; i++) {
-                   let sum1 = card[i];
-                    for(let j = i+1; j<n; j++) {
-                           let sum2 = sum1 + card[j];
-                            for(let m = j+1; m<n; m++) {
-                                    let sum3 = sum2 + card[m];
-                                    temp.push(sum3);
-                            }
-                    }
-                }
-                temp.sort((a,b)=> {
-                    return b-a;
-                });
-                answer = temp[k-1];
-                return answer;
+    <script>
+      function solution(n, k, card) {
+        let answer = 0;
+        let cnt = 0;
+
+        let list = [];
+        for (let i = 0; i < card.length; i++) {
+          for (let j = i + 1; j < card.length; j++) {
+            for (let z = j + 1; z < card.length; z++) {
+              let sum = card[i] + card[j] + card[z];
+              list.push(sum);
             }
-            
-            let arr=[13, 15, 34, 23, 45, 65, 33, 11, 26, 42];
-            console.log(solution(10, 3, arr));
-        </script>
+          }
+        }
+        list = list.sort((a, b) => b - a);
+
+        for (let i = 0; i < list.length; i++) {
+          if (list[i] === list[i - 1]) continue;
+          answer = list[i];
+          cnt++;
+          if (cnt === k) break;
+        }
+
+        return answer;
+      }
+
+      let arr = [13, 15, 34, 23, 45, 65, 33, 11, 26, 42];
+      console.log(solution(10, 3, arr));
+    </script>
    ```
    
 ## 해설 
