Update 5. Least Recently(캐시문제).md

--- a/algorithm/inflearn_algorithm_JS/section7/5. Least Recently(캐시문제).md
+++ b/algorithm/inflearn_algorithm_JS/section7/5. Least Recently(캐시문제).md
@@ -45,6 +45,42 @@
     </script>
 ```
 
+
+## 풀이2 
+```html
+  <script>
+      function solution(size, arr) {
+        let answer = 0;
+
+        let cache = new Array(size).fill(0);
+
+        for (let x of arr) {
+          let idx = cache.indexOf(x);
+          if (idx !== -1) {
+            for (let i = idx; i >= 1; i--) {
+              cache[i] = cache[i - 1];
+            }
+            cache[0] = x;
+          } else {
+            // cache.unshift(x);
+            // cache.pop();
+
+            for (let i = cache.length - 1; i >= 1; i--) {
+              cache[i] = cache[i - 1];
+            }
+            cache[0] = x;
+          }
+        }
+
+        return (answer = cache);
+      }
+
+      let arr = [1, 2, 3, 2, 6, 2, 3, 5, 7];
+      console.log(solution(5, arr));
+    </script>
+```
+
+
 ## 해설 (1)
 ```html
    <script>
