Update and rename 6. 장난꾸러기 현수(x).md to 6. 장난꾸러기 현수(o).md

--- a/algorithm/inflearn_algorithm_JS/section7/6. 장난꾸러기 현수(o).md
+++ b/algorithm/inflearn_algorithm_JS/section7/6. 장난꾸러기 현수(o).md
@@ -4,6 +4,25 @@
 현수와 짝꿍이 자리를 바꾼 반 학생들의 일렬로 서있는 키 정보가 주어질 때 현수가 받은 번호와 현수 짝꿍이 받은 번호를 차례로 출력하는 프로그램을 작성하시오.
 
 
+## 풀이
+```html
+  <script>
+      function solution(arr) {
+        let answer = [];
+
+        let temp = [...arr].sort((a, b) => a - b);
+        console.log(temp, arr);
+        for (let i = 0; i < arr.length; i++) {
+          if (temp[i] !== arr[i]) answer.push(i + 1);
+        }
+
+        return answer;
+      }
+      let arr = [120, 130, 150, 150, 130, 150];
+      console.log(solution(arr));
+    </script>
+```
+
 
 ## 해설
 ```html
