--- a/algorithm/inflearn_algorithm_JS/section7/8. 회의실 배정(x).md
+++ b/algorithm/inflearn_algorithm_JS/section7/8. 회의실 배정(x).md
@@ -40,6 +40,36 @@
     </script>
 ```
 
+## 풀이 
+```html
+  <script>
+      function solution(meeting) {
+        let answer = 1;
+        let lt = 0;
+        meeting.sort((a, b) => {
+          if (a[1] === b[1]) return a[0] - b[0];
+          else return a[1] - b[1];
+        });
+
+        for (let i = 1; i < meeting.length; i++) {
+          if (meeting[lt][1] <= meeting[i][0]) {
+            answer++;
+            lt = i;
+          }
+        }
+
+        return answer;
+      }
+
+      let arr = [
+        [3, 3],
+        [1, 3],
+        [2, 3],
+      ];
+      console.log(solution(arr));
+    </script>
+```
+
 
 ## 해설 
 ```html
