--- a/algorithm/inflearn_algorithm_JS/section7/10.이분검색(xx).md
+++ b/algorithm/inflearn_algorithm_JS/section7/10.이분검색(xx).md
@@ -22,7 +22,7 @@
         let rt = arr.length - 1;
         let mid = 0;
 
-        while (1) {
+        while (1) {.  // 만약 배열안에 target값이 있는지없는지 모르는상태에서 탐생하게되었을시, 해설과같은 lt <= rt로 조건을 설정하지않게된다면 무한루프에 빠지게된다.
           mid = Math.floor((lt + rt) / 2);
           if (target === arr[mid]) {
             answer = mid + 1;
