--- a/algorithm/inflearn_algorithm_JS/section7/11.뮤직비디오(xx).md
+++ b/algorithm/inflearn_algorithm_JS/section7/11.뮤직비디오(xx).md
@@ -20,6 +20,13 @@
 ## 해설
 ```html
     <script>
+      
+      //결정 알고리즘
+        // 답의 범위를 정해야한다.
+        // DVD에 음악을 담으로면 최소 가장 큰 음원1개를 담을 수 있어야한다. (DVD한개의 최소 용량은 9)
+        // 가장 큰 경우에는 모든 음악이 하나의 DVD에 담을 수 있는 경우다. (최대 용량은 모든 음원의 합인 45)
+        // 최소용량 ~ 최대용량에서 이분탐색을 이용하여 주어진 갯수로 담을 수 있는지를 확인해나간다.
+        // 답을결정하는 count함수를 어떻게 구성하는지가 중요하다.
       function count(songs, capacity) {
         let cnt = 1;
         let sum = 0;
