Update and rename 12.마구간 정하기(결정알고리즘).md to 12.마구간 정하기(결정알고리즘)(x).md

--- a/algorithm/inflearn_algorithm_JS/section7/12.마구간 정하기(결정알고리즘)(x).md
+++ b/algorithm/inflearn_algorithm_JS/section7/12.마구간 정하기(결정알고리즘)(x).md
@@ -6,10 +6,11 @@
 - 아래 코드는  N = 5 , C = 3 을 의미하며, 각 마구간의 좌표는 배열 arr의 요소로 주어졌다.
 
 ## 문제풀이법
-- 우선 두 마구간의 거리로서 가능한 값을 최소 ~ 최대의 범위를 알기위해 마굿간을 오름차순으로 정렬해준다. 
-- 이떄 가장 최소값은 마구간이 바로 인접했을때의 거리인 1이며, 가장 최대값은 가장 멀리있는 마구간과의 거리로, 이는 가장 멀리있는 마구간의 좌표와 동일한 값이다.
-- 이분검색을 통해 최대거리를 구해나가는데, 이분검색과정중 계산된 거리와 마구간의 배치를 count함수의 인자로 넘겨준후 몇마리를 배치할 수있는지를 반환받는다.
-- 반환된 배치할 수있는 말의 수가 주어진 말의수보다 많거나 같으면 이거리를 answer값에 대입시키고, 거리를 늘려가거나 줄여 가능한 최대값을 구해나간다.
+      // 1. 마굿간위치를 정렬시킨다.
+      // 2. 첫번쨰 머굿간에 1마리를 무조건 넣는다.
+      // 3. 바로 다음 마굿간의 위치를 mid값과 비교후 말을 배정할지 말지를 결정한다.
+      // 4. 총 배정된말의 마리수를 조건과 비교한다.
+
 
 ## 풀이 === 해설 
 ```html 
