[docs] : DFS풀이 팁 추가.

--- a/algorithm/inflearn_algorithm_JS/section8/2.재귀함수를 이용한 이진수 출력.md
+++ b/algorithm/inflearn_algorithm_JS/section8/2.재귀함수를 이용한 이진수 출력.md
@@ -1,6 +1,12 @@
 # 문제 설명 
 - 10진수 N이 입력되면 2진수로 변환하여 출력하는 프로그램을 작성하세요. 단 재귀함수를 이용해서 출력하세요.
 
+
+## DFS 풀이 팁
+- if else문으로 표현할것 
+    - if문으로 재귀가 언제 탈출해야할지를 정해라.
+     
+    
 ## 풀이
 ```html
     <script>
