--- a/algorithm/inflearn_algorithm_JS/section8/7.최대점수 구하기(이진트리DFS).md
+++ b/algorithm/inflearn_algorithm_JS/section8/7.최대점수 구하기(이진트리DFS).md
@@ -1,1 +1,27 @@
 
+# 풀이 === 해설
+- L이 커지면 동적계획법으로 풀어야한다.
+```html
+  <script>
+      function solution(m, ps, pt) {
+        let answer = 0;
+        function DFS(L, totalS, totalT) {
+          if (totalT > m) return;
+          if (L == ps.length) {
+            answer = Math.max(answer, totalS);
+          } else {
+            DFS(L + 1, totalS + ps[L], totalT + pt[L]);
+            DFS(L + 1, totalS, totalT);
+          }
+        }
+
+        DFS(0, 0, 0);
+
+        return answer;
+      }
+
+      let ps = [10, 25, 15, 6, 7];
+      let pt = [5, 12, 8, 3, 4];
+      console.log(solution(20, ps, pt));
+    </script>
+```
