--- a/algorithm/inflearn_algorithm_JS/section8/10.순열 구하기.md
+++ b/algorithm/inflearn_algorithm_JS/section8/10.순열 구하기.md
@@ -19,10 +19,10 @@
             for (let i = 0; i < arr.length; i++) {
               if (check[i] !== 0) continue;
               else {
-                check[i] = 1;
-                temp[L] = arr[i];
+                check[i] = 1; // 중복을 알림.
+                temp[L] = arr[i]; 
                 DFS(L + 1);
-                check[i] = 0;
+                check[i] = 0; // 사용했음을 알림.
               }
             }
           }
