Update 13.수열 추측하기(순열,이항계수 응용).md

--- a/algorithm/inflearn_algorithm_JS/section8/13.수열 추측하기(순열,이항계수 응용).md
+++ b/algorithm/inflearn_algorithm_JS/section8/13.수열 추측하기(순열,이항계수 응용).md
@@ -12,6 +12,7 @@
 
 
 # 해설
+```html
      <script>
       function solution(n, f) {
         let answer = 0;
@@ -57,3 +58,4 @@
 
       console.log(solution(4, 16)); // 맨 윗줄 1~4,  맨 아래에 16
     </script>
+```
