[docs] : 방향 그래프 이론

--- a/algorithm/inflearn_algorithm_JS/section9/1.그래프와 인접행렬.md
+++ b/algorithm/inflearn_algorithm_JS/section9/1.그래프와 인접행렬.md
@@ -9,7 +9,7 @@
   - V : 노드(1,2,3,4,5) 의미
   - E : 간선 (노드 - 노드 연결)
 
-- 1 -> 2 , 2 -> 1 둘다 가능하다. (양방향 가능)
+- 1 -> 2 , 2 -> 1 둘다 가능하다. ( = 양방향 그래프)
 
 ### 인접행렬 (0으로 전부 초기화)
 
@@ -18,3 +18,22 @@
 
 - ex) 문제 : 1번 노드와 연결되어있는 노드는 어떤 노드인가?
 - 1번 행을 탐색하여 1(check)이 들어있는 열이 연결되어있는 노드라고 판단.
+
+<br></br>
+<br></br>
+
+## 2. 방향 그래프
+
+<img width="360" alt="스크린샷 2022-01-28 오후 10 59 50" src="https://user-images.githubusercontent.com/58588011/151559676-8dbe697e-1148-4761-9654-8d2c36b18bcd.png">
+
+- 간선정보 (행,열)
+  - 1,2
+  - 1,3
+  - 3,4
+  - 4,2
+  - 2,5
+
+<img width="360" alt="스크린샷 2022-01-28 오후 11 06 08" src="https://user-images.githubusercontent.com/58588011/151560595-0be06d9c-95ca-49a9-95d2-e6bab80ce45b.png">
+
+- ex) 3번 노드에서 갈 수 있는 노드는?
+  - 3행을 탐색.(3번에서 4번을 이동가능)
