[docs] : 가중치 그래프 이론

--- a/algorithm/inflearn_algorithm_JS/section9/1.그래프와 인접행렬.md
+++ b/algorithm/inflearn_algorithm_JS/section9/1.그래프와 인접행렬.md
@@ -11,6 +11,8 @@
 
 - 1 -> 2 , 2 -> 1 둘다 가능하다. ( = 양방향 그래프)
 
+  <br></br>
+
 ### 인접행렬 (0으로 전부 초기화)
 
 - ex) 1번 드와 2번노드가노 연결되어있다면(1 -> 2, 2 -> 1) graph[1][2] = 1(check), graph[2][1] = 1(check) 대입
@@ -33,7 +35,20 @@
   - 4,2
   - 2,5
 
+### 인접행렬
+
 <img width="360" alt="스크린샷 2022-01-28 오후 11 06 08" src="https://user-images.githubusercontent.com/58588011/151560595-0be06d9c-95ca-49a9-95d2-e6bab80ce45b.png">
 
 - ex) 3번 노드에서 갈 수 있는 노드는?
   - 3행을 탐색.(3번에서 4번을 이동가능)
+
+<br></br>
+<br></br>
+
+## 가중치 그래프
+
+<img width="360" alt="스크린샷 2022-01-28 오후 11 08 53" src="https://user-images.githubusercontent.com/58588011/151561036-aff920dc-418b-4b63-b225-61d74ef28c51.png">
+
+## 인접행렬
+
+- 기존의 무방향그래프, 방향그래프에서 간선정보를 1로 초기화했다면, 가중치 그래프의 인접 행렬에서는 가중치 값을 초기화 시켜준다.
