Update 2. 경로탐색 (DFS-인접행렬 : 노드개수가 적을떄)).md

--- a/algorithm/inflearn_algorithm_JS/section9/2. 경로탐색 (DFS-인접행렬 : 노드개수가 적을떄)).md
+++ b/algorithm/inflearn_algorithm_JS/section9/2. 경로탐색 (DFS-인접행렬 : 노드개수가 적을떄)).md
@@ -8,7 +8,7 @@
 
         let answer = 0;
         let graph = Array.from(Array(n + 1), () => Array(n + 1).fill(0)); // 인접행렬 , 0번이아닌 1번인덱스부터 사용하기위해 n+1
-        let ch = Array.from({ length: n + 1 }, () => 0); // 체크배열(노드 방문여부 확인)
+        let ch = Array.from(Array(n+1), () => 0); // 체크배열(노드 방문여부 확인)
         const path = [];
 
         for (let [a, b] of arr) {
