Update 3.경로탐색(DFS-인접 리스트 : 노드 개수가 많을떄 적용).md

--- a/algorithm/inflearn_algorithm_JS/section9/3.경로탐색(DFS-인접 리스트 : 노드 개수가 많을떄 적용).md
+++ b/algorithm/inflearn_algorithm_JS/section9/3.경로탐색(DFS-인접 리스트 : 노드 개수가 많을떄 적용).md
@@ -3,7 +3,7 @@
       function solution(n, arr) {
         // 정점 개수가 많을떈?
         // 인접 행렬보단 인접 리스트로 접근해라.(시간 복잡도 고려)
-
+        // 인접 행렬로 그래프를 구성하였을경우엔 모든 노드들을 탐색하여 연결이 됬는지 확인하지만, 인접 리스트로 구성시엔 연결된 노드로만 그래프가 구성되기떄문에 보다 빠르게 탐색이 가능하다.
         let answer = 0;
         // 행은 n+1까지 있어야한다. (노드를 나타내기떄문)
         let graph = Array.from(Array(n + 1), () => Array());
